# proc-macro-workshop

./: Cargo.toml  README.md
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml  readme.md
builder/src/: lib.rs  main.rs
debug/: Cargo.toml  readme.md
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
