[package]
name = "sorted"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version = "0.15", features = ["extra-traits", "full", "visit-mut"] }
proc-macro2 = "0.4.30"
# TODO version 1.0.0 以降だと動かない。動くバージョンでデバッグして意図を掴んで書き換える
#quote = "1.0.33"
quote = "0.6.13"

